[bean] support record